platform/underlay/3-shims/starttls-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: starttls-fallback-route
  namespace: default
spec:
  parentRefs:
    - name: gateway
      sectionName: postgres-direct
  hostnames:
    - fallback-route.hostname.is.invalid
  rules:
    - backendRefs:
        - name: pg-starttls
          port: 5432

---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: pg-starttls-client-ip
  namespace: default
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: TLSRoute
      name: starttls-fallback-route

  proxyProtocol:
    version: V2
